--- a/angular.json
+++ b/angular.json
@@ -3,5 +3,55 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
+    "angular-weekday-course-calendar": {
+      "projectType": "library",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
+      "root": "projects/angular-weekday-course-calendar",
+      "sourceRoot": "projects/angular-weekday-course-calendar/src",
+      "prefix": "",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/angular-weekday-course-calendar/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/angular-weekday-course-calendar/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/angular-weekday-course-calendar/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/angular-weekday-course-calendar/src/test.ts",
+            "tsConfig": "projects/angular-weekday-course-calendar/tsconfig.spec.json",
+            "karmaConfig": "projects/angular-weekday-course-calendar/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/angular-weekday-course-calendar/**/*.ts",
+              "projects/angular-weekday-course-calendar/**/*.html"
+            ]
+          }
+        }
+      }
+    }
+  },
+  "cli": {
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
